force-app/main/default/objects/Quote/Quote.object-meta.xml
<CustomObject>
    <description>Native RCA Quote — the primary quoting object in Revenue Cloud Advanced. Replaces SBQQ__Quote__c from legacy CPQ.</description>
    <label>Quote</label>
    <pluralLabel>Quotes</pluralLabel>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>