force-app/main/default/objects/Quote/fields/RCA_ApprovalNotes__c.field-meta.xml
<CustomField>
    <fullName>RCA_ApprovalNotes__c</fullName>
    <label>Approval Notes</label>
    <description>Free-text field for the submitter to add context when routing a quote for discount approval.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>