force-app/main/default/objects/Quote/fields/RCA_DealType__c.field-meta.xml
<CustomField>
    <fullName>RCA_DealType__c</fullName>
    <label>Deal Type</label>
    <description>Classifies the quote as New Business, Renewal, Upsell, or Amendment. Used to route approvals and set discount thresholds.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New Business</fullName><default>true</default><label>New Business</label></value>
            <value><fullName>Renewal</fullName><default>false</default><label>Renewal</label></value>
            <value><fullName>Upsell</fullName><default>false</default><label>Upsell</label></value>
            <value><fullName>Amendment</fullName><default>false</default><label>Amendment</label></value>
            <value><fullName>Cross-Sell</fullName><default>false</default><label>Cross-Sell</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>