force-app/main/default/objects/Quote/fields/RCA_MaxLineDiscount__c.field-meta.xml
<CustomField>
    <fullName>RCA_MaxLineDiscount__c</fullName>
    <label>Max Line Discount (%)</label>
    <description>Formula that rolls up the highest discount percentage across all QuoteLineItems. Used to trigger approval routing.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>