force-app/main/default/objects/Quote/recordTypes/RCA_NewBusiness.recordType-meta.xml
<RecordType>
    <fullName>RCA_NewBusiness</fullName>
    <active>true</active>
    <description>Record type for net-new customer quotes. Applies standard new-business approval thresholds.</description>
    <label>New Business</label>
</RecordType>