force-app/main/default/objects/Quote/recordTypes/RCA_Renewal.recordType-meta.xml
<RecordType>
    <fullName>RCA_Renewal</fullName>
    <active>true</active>
    <description>Record type for subscription renewal quotes. Linked to an existing Contract. Higher discount thresholds permitted.</description>
    <label>Renewal</label>
</RecordType>