force-app/main/default/objects/Quote/validationRules/RCA_ExpirationDateMustBeFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>RCA_ExpirationDateMustBeFuture</fullName>
    <active>true</active>
    <description>Prevents saving a Quote with an expiration date in the past. Applies to all deal types.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(ExpirationDate)),
    ExpirationDate &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Expiration Date must be today or a future date.</errorMessage>
    <errorDisplayField>ExpirationDate</errorDisplayField>
</ValidationRule>