force-app/main/default/objects/Quote/validationRules/RCA_NoEditOnApprovedQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>RCA_NoEditOnApprovedQuote</fullName>
    <active>true</active>
    <description>Locks the Quote once Status = Approved. Users must clone to make further changes.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, "Approved"),
    NOT(ISNEW()),
    OR(
        ISCHANGED(TotalPrice),
        ISCHANGED(ExpirationDate),
        ISCHANGED(Pricebook2Id)
    )
)</errorConditionFormula>
    <errorMessage>Approved quotes are locked. Please clone this quote to make changes.</errorMessage>
</ValidationRule>